Closed Bug 1884006 Opened 2 years ago Closed 2 years ago

dom/media/mediacontrol/MediaControlService.cpp:143:18: error: unused variable 'usedOnMediaControl' [-Werror,-Wunused-variable]

Categories

(Core :: Audio/Video: Playback, defect)

defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building with --enable-project=mobile/ios --enable-warnings-as-errors:

 0:06.12 /tmp/gecko-ios/dom/media/mediacontrol/MediaControlService.cpp:143:18: error: unused variable 'usedOnMediaControl' [-Werror,-Wunused-variable]
 0:06.12   143 |   const uint32_t usedOnMediaControl = 1;
 0:06.12       |                  ^~~~~~~~~~~~~~~~~~
 0:06.12 /tmp/gecko-ios/dom/media/mediacontrol/MediaControlService.cpp:168:18: error: unused variable 'enableOnMediaControl' [-Werror,-Wunused-variable]
 0:06.12   168 |   const uint32_t enableOnMediaControl = 0;
 0:06.12       |                  ^~~~~~~~~~~~~~~~~~~~
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/ac25a602f99e Add telemetry for media control usage on uikit. r=media-playback-reviewers,alwu
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: