Bug 1884006 - Add telemetry for media control usage on uikit. r=media-playback-reviewers,alwu

Differential Revision: https://phabricator.services.mozilla.com/D203834